fix(notification-drawer): fix action alignment, add no-offset mod (#6854)

--- a/src/patternfly/components/NotificationDrawer/notification-drawer.scss
+++ b/src/patternfly/components/NotificationDrawer/notification-drawer.scss
@@ -65,6 +65,9 @@
   --#{$notification-drawer}__list-item-header-title--FontWeight: var(--pf-t--global--font--weight--body--bold);
   --#{$notification-drawer}__list-item-header-title--max-lines: 1;
 
+  // List item action
+  --#{$notification-drawer}__list-item-action--MarginBlockStart: calc(var(--pf-t--global--spacer--control--vertical--plain) * -1);
+
   // List item description
   --#{$notification-drawer}__list-item-description--MarginBlockEnd: var(--pf-t--global--spacer--sm);
 
@@ -237,6 +240,11 @@
 .#{$notification-drawer}__list-item-action {
   grid-row: 1 / 3;
   grid-column: 2 / 3;
+  margin-block-start: var(--#{$notification-drawer}__list-item-action--MarginBlockStart);
+
+  &.pf-m-no-offset {
+    --#{$notification-drawer}__list-item-action--MarginBlockStart: 0;
+  }
 }
 
 .#{$notification-drawer}__list-item-description {
